project_ruby_styles

--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,18 +1,24 @@
-<div id="<%= dom_id book %>">
-  <p>
-    <strong>Title:</strong>
-    <%= book.title %>
-  </p>
-
-  <p>
-    <strong>Description:</strong>
-    <%= book.description %>
-  </p>
+<div class="conteiner">
+  <div class="body-image">
   
+  </div>
 
-  <p>
-    <strong>Year:</strong>
-    <%= book.year %>
-  </p>
+  <div class="body_content">
+      <div class="label-content">
+        <strong>Title:</strong>
+        <%= book.title %>
+      </div>
+
+      <div class="label-content">
+        <strong>Description:</strong>
+        <%= book.description %>
+      </div>
+    
+
+      <div class="label-content">
+        <strong>Year:</strong>
+        <%= book.year %>
+      </div>
+  </div>
 
 </div>
