--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,9 +1,9 @@
+<header>
 <h1>New book</h1>
-
+</header>
 <%= render "form", book: @book %>
 
 <br>
-
-<div>
-  <%= link_to "Back to books", books_path %>
+<div class= "button-back">
+    <%= link_to "catálagos livro", books_path %>
 </div>
