--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,180 @@
  *= require_tree .
  *= require_self
  */
+
+
+ /**/
+ *{
+   box-sizing: border-box;
+   margin: 0;
+   padding: 100;
+   font-family: "poppings", sans-serif;
+ }
+.conteiner{
+   display: flex;
+   flex-direction: column;
+   border-radius: 40px;
+   padding: 18px;
+   margin: 0px 200px 15px 200px;
+   box-shadow: 5px 5px 10px rgba(0, 0, 0, 212);
+}
+
+.label-content{
+  display: flex;
+  padding: 20px;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+header h1::after{
+  content:''; 
+  display: block;
+   width: 5rem;
+   height: 0.3rem;
+   background-color: violet;
+   margin: 0 auto;
+   position: absolute;
+  border-radius: 10px;
+}
+
+.label-content{
+  display: flex;
+  flex-direction: wrap;
+  margin: 0.6rem;
+  padding: 0.8rem 15rem;
+  border-radius: 5px;
+  box-shadow: 1px 1px 6px #feeeee52;
+}
+.label-content :hover{
+  background-color: #feeeee75;
+}
+
+/*buttons*/
+.button-edit{
+  width: 100%;
+  border: none;
+  border-radius: 15px;
+  background-color:rebeccapurple;
+  padding: 10px 20px;
+  cursor: pointer;
+  display: flex;
+}
+.button-edit:hover{
+  background-color: #6b63fff1;
+}
+.button-edit a{
+  text-decoration: none;
+  font-size: 0.91rem;
+  font-weight: 500;
+  color: #ffff;
+}
+.button-back{
+  width: 100%;
+  border: none;
+  border-radius: 15px;
+  background-color:rebeccapurple;
+  padding: 10px 20px;
+  cursor: pointer;
+  display: flex;
+}
+.button-back:hover{
+  background-color: #6b63fff1;
+}
+.button-back a{
+  text-decoration: none;
+  font-size: 0.91rem;
+  font-weight: 500;
+  color: #ffff;
+}
+.button-show{
+  width: 100%;
+  border: none;
+  border-radius: 15px;
+  background-color:rebeccapurple;
+  padding: 10px 20px;
+  cursor: pointer;
+  display: flex;
+}
+.button-show:hover{
+  background-color: #6b63fff1;
+}
+.button-show a{
+  text-decoration: none;
+  font-size: 0.91rem;
+  font-weight: 500;
+  color: #ffff;
+}
+.button-destroy{
+  width: 100%;
+  border: none;
+  border-radius: 15px;
+  background-color:rebeccapurple;
+  padding: 10px 20px;
+  cursor: pointer;
+  display: flex;
+}
+.button-destroy:hover{
+  background-color: #6b63fff1;
+}
+.button-destroy a{
+  text-decoration: none;
+  font-size: 0.91rem;
+  font-weight: 500;
+  color: #ffff;
+}
+.button-new{
+  width: 100%;
+  border: none;
+  border-radius: 15px;
+  background-color:rebeccapurple;
+  padding: 10px 20px;
+  cursor: pointer;
+  display: flex;
+}
+.button-new:hover{
+  background-color: #6b63fff1;
+}
+.button-new a{
+  text-decoration: none;
+  font-size: 0.91rem;
+  font-weight: 500;
+  color: #ffff;
+}
+
+.back-to-books-btn:hover {
+  border-radius: 15px;
+  background-color:rebeccapurple;
+  color: #ffffff;
+  padding: 10px 20px;
+  cursor: pointer;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  justify-items: auto;
+}
+.button-create {
+  border-radius: 15px;
+  background-color:rebeccapurple;
+  color: #ffffff;
+  padding: 10px 20px;
+  width: 100px;
+  cursor: pointer;
+  text-decoration: none;
+  display: flex;
+  justify-content: center;
+  justify-items: auto;
+  
+}
+.button-create:hover{
+  background-color: #6b63fff1;
+}
+.button-create a{
+  text-decoration: none;
+  font-size: 0.91rem;
+  font-weight: 500;
+  color: #ffff;
+}
+
+.button-back link-to{
+  color: #ffff;
+}
