--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,10 +1,14 @@
-<h1>Editing book</h1>
-
+<header>
+<h1>Atualizar livro</h1>
+</header>
 <%= render "form", book: @book %>
 
 <br>
 
-<div>
-  <%= link_to "Show this book", @book %> |
-  <%= link_to "Back to books", books_path %>
-</div>
+  <div class="button-show">
+    <%= link_to "visualizar livro", @book %> |
+  </div>
+  <div class="button-back">
+    <%= link_to "Back to books", books_path %>
+  </div
+
