--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,14 +1,13 @@
 <p style="color: green"><%= notice %></p>
-
+<header>
 <h1>Books</h1>
+</header>
 
-<div id="books">
-  <% @books.each do |book| %>
+  <% @books.each do |book|%>
     <%= render book %>
-    <p>
-      <%= link_to "Show this book", book %>
+     <p>
+        <%= link_to "visualizar livro", book, class: "button-show" %>
     </p>
   <% end %>
-</div>
 
-<%= link_to "New book", new_book_path %>
+  <%= link_to "Cadastrar livro", new_book_path, class: "button-new" %>
