--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,27 +19,55 @@
  *{
    box-sizing: border-box;
    margin: 0;
-   padding: 100;
+   padding: 0;
    font-family: "poppings", sans-serif;
  }
+
+
+.body{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
 .conteiner{
-   display: flex;
-   flex-direction: column;
-   border-radius: 40px;
-   padding: 18px;
-   margin: 0px 200px 15px 200px;
-   box-shadow: 5px 5px 10px rgba(0, 0, 0, 212);
+    width: 80%;
+    right: 80vh;
+    display: flex;
+    margin: 15px 50px 20px 50px;
+    border-radius: 40px;
+    padding: 10px;
+    background-color: #0c0ce94d;
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 212);
+ }
+ .body-conteiner{
+    width: 50%;
+    right: 100px;
+    display: block;
+    justify-content: left;
+    align-items: normal;
+ }
+.body-image{
+    width: 50%;
+    display: flex;
 }
 
-.label-content{
-  display: flex;
-  padding: 20px;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
+.body-image img{
+    display: flex;
+    justify-content: center;
+    margin: 5px 50px 5px 50px ;
+    width: 25rem;
+
 }
+
+.label-input{
+    display: flex;
+    flex-direction: wrap;
+    margin: 25px 0px 25px 0px;
+    width: 100%;
+}
+
 header h1::after{
-  content:''; 
+  content:'';
   display: block;
    width: 5rem;
    height: 0.3rem;
@@ -49,14 +77,7 @@ header h1::after{
   border-radius: 10px;
 }
 
-.label-content{
-  display: flex;
-  flex-direction: wrap;
-  margin: 0.6rem;
-  padding: 0.8rem 15rem;
-  border-radius: 5px;
-  box-shadow: 1px 1px 6px #feeeee52;
-}
+
 .label-content :hover{
   background-color: #feeeee75;
 }
