--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -1,35 +1,38 @@
-<%= form_with(model: book) do |form| %>
-  <% if book.errors.any? %>
-    <div style="color: red">
-      <h2><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h2>
 
-      <ul>
-        <% book.errors.each do |error| %>
-          <li><%= error.full_message %></li>
-        <% end %>
-      </ul>
-    </div>
-  <% end %>
+  <%= form_with(model: book) do |form| %>
+    <% if book.errors.any? %>
+      <div style="color: red">
+        <h2><%= pluralize(book.errors.count, "error") %> prohibited this book from being saved:</h2>
+        
+        <ul>
+          <% book.errors.each do |error| %>
+            <li><%= error.full_message %></li>
+          <% end %>
+        </ul>
+      </div>
+    <% end %>
 
-<div class="conteiner">
-<div class="body-image">
-<img src="<%= show_svg_imagem_path %>" alt="Imagem SVG">
-</div>
-    <div class="body-conteiner">
-        <%= form.label :Titulo, class: "title-content" %>
-        <%= form.text_field :title, placeholder: "Digite o título do livro", class: "label-content" %>
+    
 
-        <%= form.label :Descrição, class: "title-content" %>
-        <%= form.text_field :description, placeholder: "Faça uma breve descrição do livro", class: "label-content" %>
+    <div class="conteiner">
+      <div class="body-image">
+        <img src="<%= show_svg_imagem_path %>" alt="Imagem SVG">
+      </div>
 
-        <%= form.label :ano, class: "title-content" %>
-        <%= form.text_field :year, placeholder: "Digite o ano do livro", class: "label-content" %>
-          
+      <div class="body-conteiner">
+        <%= form.label :Titulo, class: "label-input" %>
+        <%= form.text_field :title, placeholder: "Digite o título do livro", class: "label-input" %>
+
+        <%= form.label :Descrição, class: "label-input" %>
+        <%= form.text_field :description, placeholder: "Faça uma breve descrição do livro", class: "label-input" %>
+
+        <%= form.label :ano, class: "label-input" %>
+        <%= form.text_field :year, placeholder: "Digite o ano do livro", class: "label-input" %>
+                
         <div class="button-create">
           <%= form.submit %>
         </div>
+      </div>
     </div>
-    
-  </div>
   <% end %>
 
