--- a/app/views/books/_form.html.erb
+++ b/app/views/books/_form.html.erb
@@ -14,7 +14,7 @@
   <div class="body">
     <div class="conteiner">
       <div class="body-image">
-        <img src="<%= show_svg_imagem_path %>" alt="Imagem SVG">
+        <%= image_tag 'book.png', size: "150x300" %>
       </div>
 
       <div class="body-conteiner">
