--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -6,6 +6,6 @@
 <br>
 
 <div class="show-buttons-container">
-    <%= link_to "visualizar livro", @book, class: "button-show" %>
+    <%= link_to "Visualizar livro", @book, class: "button-show" %>
     <%= link_to "Voltar para o catálogo", books_path, class: "button-back" %>
 </div>
