--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,8 +1,8 @@
 <header>
-<h1>New book</h1>
-<%= link_to "catálagos livro", books_path, class: "button-new" %>
-
+  <h1>Novo livro</h1>
+  <%= link_to "Catálago de livros", books_path, class: "button-new" %>
 </header>
+
 <%= render "form", book: @book %>
 
 <br>
