--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -10,6 +10,6 @@
 
     <%= link_to "Voltar para o catálogo", books_path, class: "button-back" %>
 
-    <%= button_to "Excluir livros", @book, method: :delete, class: "button-destroy" %>
+    <%= button_to "Excluir livro", @book, method: :delete, class: "button-destroy" %>
 </div>
 
