--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -27,8 +27,9 @@
   align-items: center;
   justify-content: center;
 }
+
 .conteiner {
-  width: 80%;
+  width: 50%;
   right: 80vh;
   display: flex;
   margin: 15px 50px 20px 50px;
@@ -37,6 +38,7 @@
   background-color: #0c0ce94d;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.7);
 }
+
 .body-conteiner {
   width: 50%;
   right: 100px;
@@ -84,6 +86,12 @@ header h1::after {
   margin: 0 auto;
   position: absolute;
   border-radius: 10px;
+}
+
+header {
+  display: flex;
+  padding: 10px;
+  gap: 20px;
 }
 
 .label-content :hover {
